# rustc-benchmarks

./: README.md  compare.py  process.sh
futures-rs-test-all/: makefile
helloworld/: makefile
html5ever-2015-05-15/: Cargo.toml  makefile
html5ever-2015-05-15/macros/src/: lib.rs  match_token.rs  named_entities.rs
html5ever-2015-05-15/src/: lib.rs
html5ever-2015-05-15/src/tokenizer/: buffer_queue.rs
html5ever-2016-08-25/: makefile
hyper.0.5.0/: makefile
inflate-0.1.0/: makefile
issue-32062-equality-relations-complexity/: makefile
issue-32278-big-array-of-strings/: big-array-of-strings.rs  makefile
piston-image-0.10.3/: makefile
regex-0.1.80/: makefile
regex-macros.0.1.30/: makefile
regex-macros.0.1.30/regex_macros/src/: lib.rs
regex-macros.0.1.30/src/: lib.rs
regex.0.1.30/: makefile
rust-encoding-0.3.0/: makefile
rust-encoding.0.2.32/: makefile
scripts/: README.md  go.sh  nightly.sh  process.py  run_bench.sh  setup.sh  time.sh
servo-script-20170228/: .gitignore  .servobuild  d007eef5.patch  makefile
servo-script-20170228/tests/wpt/mozilla/tests/mozilla/bluetooth/getPrimaryServices/: get-same-service.html
syntex-0.42.2/: makefile
syntex-0.42.2-incr-clean/: .gitignore  Cargo.toml  makefile
tuple-stress/: makefile
