[package]

name = "html5ever"
version = "0.0.0"
authors = [ "The html5ever Project Developers" ]

[lib]
name = "html5ever"

# https://github.com/rust-lang/cargo/issues/1512
doctest = false

[dependencies]
time = "0"
log = "0"
phf = "0.7"
phf_macros = "0.7"
string_cache = "0.1.12"
string_cache_plugin = { version = "0.1.7", optional = true }

[dependencies.mac]
git = "https://github.com/reem/rust-mac"

[dependencies.html5ever_macros]
path = "macros"

[dev-dependencies]
rustc-serialize = "0"

[dev-dependencies.test_util]
path = "test_util"

[dev-dependencies.html5ever_dom_sink]
path = "dom_sink"

[profile.dev]
debug = false

[profile.test]
debug = false
